force-app/main/default/objects/HMC_Target__c/HMC_Target__c.object-meta.xml
<CustomObject>
    <label>Dealer Target</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>