force-app/main/default/objects/HMC_Target__c/fields/HMC_ASM__c.field-meta.xml
<CustomField>
    <fullName>HMC_ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASM</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.ManagerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets2</relationshipName>
    <type>Lookup</type>
</CustomField>