force-app/main/default/objects/HMC_Target__c/fields/HMC_Dealer__c.field-meta.xml
<CustomField>
    <fullName>HMC_Dealer__c</fullName>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>