force-app/main/default/objects/HMC_Target__c/fields/HMC_NSM__c.field-meta.xml
<CustomField>
    <fullName>HMC_NSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>