force-app/main/default/objects/HMC_Target__c/fields/HMC_RSM__c.field-meta.xml
<CustomField>
    <fullName>HMC_RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets1</relationshipName>
    <type>Lookup</type>
</CustomField>