force-app/main/default/objects/HMC_Target__c/fields/HMC_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Target_Amount__c</fullName>
    <label>Target Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>