force-app/main/default/objects/HMC_Target__c/fields/Month_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Start_Date__c</fullName>
    <formula>DATEVALUE(text(  HMC_Year__c ) &amp; &apos;-&apos; &amp; text( HMC_Month__c ) &amp; &apos;-&apos; &amp; &apos;01&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Start Date</label>
    <type>Date</type>
</CustomField>