force-app/main/default/objects/HMC_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HMC_Dealer__c</columns>
    <columns>HMC_Month__c</columns>
    <columns>HMC_Year__c</columns>
    <columns>HMC_Target_Amount__c</columns>
    <columns>HMC_Achievement_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>